2 files modified, 1 added, 1 deleted

--- a/src/app/lista-articulos/lista-articulos.component.html
+++ b/src/app/lista-articulos/lista-articulos.component.html
@@ -15,7 +15,7 @@
       <tbody>
         <tbody>
                <tr *ngFor="let articulo of articulos">
-                   <td><img src="articulo.Imagen"></td>
+                   <td><img [src]='articulo.imagen'></td>
                    <td>{{articulo.descripcion}}</td>
                    <td>{{articulo.codigo}}</td>
                    <td>{{articulo.cantidad}}</td>
