--- a/src/app/buscador/buscador.component.html
+++ b/src/app/buscador/buscador.component.html
@@ -6,14 +6,15 @@
                     <div class="row">
                         <div class="col-md-8 offset-md-2">
                             <div class="pt-3 pb-4">
-                                <div class="input-group">
-                                    <form action="">
-                                        <input type="text" id="" name="" class="form-control" value="">
-                                        <div class="input-group-append">
-                                            <button id="btnSearch" type="submit" class="btn waves-effect waves-light btn-custom"><i class="fa fa-search mr-1"></i> Search</button>
-                                        </div>
-                                    </form>
-                                </div>
+                                <form action="">
+                                    <div class="input-group">
+                                    
+                                            <input type="text" id="" name="" class="form-control" value="">
+                                            <div class="input-group-append">
+                                                <button id="btnSearch" type="submit" class="btn waves-effect waves-light btn-custom"><i class="fa fa-search mr-1"></i> Search</button>
+                                            </div>
+                                    </div>
+                                </form>
                                 <div class="mt-4 text-center">
                                     <h4>Search Results For "Admin Dashboard"</h4></div>
                             </div>
@@ -22,7 +23,7 @@
                     <!-- end row -->
                     <ul class="nav nav-tabs tabs-bordered">
                         <li class="nav-item"><a href="#home" data-toggle="tab" aria-expanded="true" class="nav-link active">All results <span class="badge badge-success ml-1">325</span></a></li>
-                        <li class="nav-item"><a href="#users" data-toggle="tab" aria-expanded="false" class="nav-link">Users <span class="badge badge-danger ml-1">89</span></a></li>
+                       <!--  <li class="nav-item"><a href="#users" data-toggle="tab" aria-expanded="false" class="nav-link">Users <span class="badge badge-danger ml-1">89</span></a></li> -->
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane active" id="home">
@@ -54,7 +55,7 @@
                         </div>
                         <!-- end All results tab -->
                         <!-- Users tab -->
-                        <div class="tab-pane" id="users">
+                        <!-- <div class="tab-pane" id="users">
                             <div class="search-item">
                                 <div class="media mt-1"><img class="d-flex mr-3 rounded-circle" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Generic placeholder image" height="54">
                                     <div class="media-body">
@@ -76,7 +77,7 @@
                                 <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">»</span> <span class="sr-only">Next</span></a></li>
                             </ul>
                             <div class="clearfix"></div>
-                        </div>
+                        </div> -->
                         <!-- end Users tab -->
                     </div>
                 </div>
