--- a/src/app/buscador/buscador.component.html
+++ b/src/app/buscador/buscador.component.html
@@ -22,10 +22,10 @@
                     <!-- end row -->
                     <div *ngIf='resultado' class="container">
                         <div class="mt-4 text-center">
-                            <h4>Search Results For {{expresionFiltro}}</h4>
+                            <h4>Resultados de "{{expresionFiltro}}"</h4>
                         </div>
                         <ul class="nav nav-tabs tabs-bordered">
-                            <li class="nav-item"><a href="#home" data-toggle="tab" aria-expanded="true" class="nav-link active">All results <span class="badge badge-success ml-1">325</span></a></li>
+                            <li class="nav-item"><a href="#home" data-toggle="tab" aria-expanded="true" class="nav-link active">Todos los resultados<span class="badge badge-success ml-1">325</span></a></li>
                         <!--  <li class="nav-item"><a href="#users" data-toggle="tab" aria-expanded="false" class="nav-link">Users <span class="badge badge-danger ml-1">89</span></a></li> -->
                         </ul>
                         <div class="tab-content">
@@ -43,7 +43,7 @@
                                             <p class="mb-0 text-muted">Dolor posuere proin blandit accumsan senectus netus nullam curae, ornare laoreet adipiscing luctus mauris adipiscing pretium eget fermentum, tristique lobortis est ut metus lobortis tortor tincidunt himenaeos habitant quis dictumst proin odio sagittis purus mi, nec taciti vestibulum quis in sit varius lorem sit metus mi.</p>
                                         </div>
 
-                                        <ul class="pagination justify-content-end pagination-split mt-0">
+                                        <ul class="pagination justify-content-center pagination-split mt-0">
                                             <li class="page-item"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">«</span> <span class="sr-only">Previous</span></a></li>
                                             <li class="page-item"><a class="page-link" href="#">1</a></li>
                                             <li class="page-item active"><a class="page-link" href="#">2</a></li>
