--- a/src/app/buscador/buscador.component.html
+++ b/src/app/buscador/buscador.component.html
@@ -8,14 +8,12 @@
                             <div class="pt-3 pb-4">
                                 <form action="" method="">
                                     <div class="input-group">
-                                    
                                             <input [(ngModel)]="expresionFiltro" type="text" id="filtro" name="filtro" class="form-control"/>
                                             <div class="input-group-append">
-                                                <button id="btnSearch" (click)='getSearch()' class="btn waves-effect waves-light btn-custom"><i class="fa fa-search mr-1"></i> Search</button>
+                                                <button id="btnSearch" (click)='getSearch()' class="btn waves-effect waves-light btn-custom"><i class="fa fa-search mr-1"></i> Buscar</button>
                                             </div>
                                     </div>
                                 </form>
-                                
                             </div>
                         </div>
                     </div>
@@ -32,18 +30,13 @@
                             <div class="tab-pane active" id="home">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <div class="search-item">
-                                            <h4 class="mb-1"><a href="#">Bootdey.com - Responsive Admin Template</a></h4>
-                                            <div class="font-13 text-success mb-3">https://www.bootdey.com</div>
-                                            <p class="mb-0 text-muted">Dolor posuere proin blandit accumsan senectus netus nullam curae, ornare laoreet adipiscing luctus mauris adipiscing pretium eget fermentum, tristique lobortis est ut metus lobortis tortor tincidunt himenaeos habitant quis dictumst proin odio sagittis purus mi, nec taciti vestibulum quis in sit varius lorem sit metus mi.</p>
-                                        </div>
-                                        <div class="search-item">
-                                            <h4 class="mb-1"><a href="#">Uplon - Responsive Bootstrap 4 Web App Kit</a></h4>
-                                            <div class="font-13 text-success mb-3">https://www.bootdey.com/bootstrap-snippets?utf8=%E2%9C%93&q=snippet</div>
-                                            <p class="mb-0 text-muted">Dolor posuere proin blandit accumsan senectus netus nullam curae, ornare laoreet adipiscing luctus mauris adipiscing pretium eget fermentum, tristique lobortis est ut metus lobortis tortor tincidunt himenaeos habitant quis dictumst proin odio sagittis purus mi, nec taciti vestibulum quis in sit varius lorem sit metus mi.</p>
+                                        <div *ngFor="let documento of muchosDocumentos" class="search-item">
+                                            <h4 class="mb-1"><a href="#">{{documento["nombreArchivo"]}}</a></h4>
+                                            <!-- <div class="font-13 text-success mb-3">https://www.bootdey.com</div> -->
+                                            <p class="mb-0 text-muted">{{documento.primerasLineas}}</p>
                                         </div>
 
-                                        <ul class="pagination justify-content-center pagination-split mt-0">
+                                        <!-- <ul class="pagination justify-content-center pagination-split mt-0">
                                             <li class="page-item"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">«</span> <span class="sr-only">Previous</span></a></li>
                                             <li class="page-item"><a class="page-link" href="#">1</a></li>
                                             <li class="page-item active"><a class="page-link" href="#">2</a></li>
@@ -51,7 +44,7 @@
                                             <li class="page-item"><a class="page-link" href="#">4</a></li>
                                             <li class="page-item"><a class="page-link" href="#">5</a></li>
                                             <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">»</span> <span class="sr-only">Next</span></a></li>
-                                        </ul>
+                                        </ul> -->
                                         <div class="clearfix"></div>
                                     </div>
                                 </div>
